fixed container on gamesboard

--- a/src/startgame.html
+++ b/src/startgame.html
@@ -14,7 +14,8 @@
     <p>Informazioni: <span id="info-gioco"></span></p>
   </div>
   <!-- div per contenere le boards , tutti gli elementi qui per javascript-->
-  <div id="gameboard-container"></div>
+  
+  <div id="gamesboard-container"></div>
   <!-- div per le opzioni, tutte le barche che possiamo piazzare-->
  
     <!-- Questi <div> contengono le opzioni delle navi che possono essere trascinate sulla tavola da gioco.
