--- a/src/startgame.html
+++ b/src/startgame.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Battleship On Ethereum</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
- 
-</head>
-<body>
-  <div id="info-gioco">
-    <p>Turn: <span id="turn-display"></span></p>
-    <p>Informazioni: <span id="info-gioco"></span></p>
-  </div>
-  <!-- div per contenere le boards , tutti gli elementi qui per javascript-->
-  
-  <div id="gamesboard-container"></div>
-  <!-- div per le opzioni, tutte le barche che possiamo piazzare-->
- 
-    <!-- Questi <div> contengono le opzioni delle navi che possono essere trascinate sulla tavola da gioco.
-       Ognuno ha una classe specifica per il CSS e l'attributo draggable="true" per consentire il trascinamento.-->
-<div class="option-container">
-  <div class="nave1-preview" draggable="true"></div>
-  <div class="nave2-preview" draggable="true"></div>
-  <div class="nave3-preview" draggable="true"></div>
-  <div class="nave4-preview" draggable="true"></div>
-  <div class="nave5-preview" draggable="true"></div>
-</div>
+  <head>
+    <meta charset="utf-8">
+    <title>Battle Ships on Ethereum</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js" charset="utf-8"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
+  </head>
+  <body>
 
-<button id="flip-button">Ruota Navi</button>
-<button id="avvia-partita">Avvia Partita</button>
-<script src="js/app.js"></script>
+    <div class="container">
+        <div class="griglia griglia-user"></div>
+        <div class="griglia griglia-computer"></div>
+    </div>
 
+    <div class="hidden-info">
+      <button id="start">Avvia Gioco</button>
+      <button id="rotate">Ruota le Tue Navi</button>
+      <h3 id="whose-go">Turno del giocatore:</h3>
+      <h3 id="info"></h3>
+    </div>
 
+    <div class="griglia-display">
+      <div class="nave naveuno-container" draggable="true"><div id="naveuno-0"></div><div id="naveuno-1"></div></div>
+      <div class="nave navedue-container" draggable="true"><div id="navedue-0"></div><div id="navedue-1"></div><div id="navedue-2"></div></div>
+      <div class="nave navetre-container" draggable="true"><div id="navetre-0"></div><div id="navetre-1"></div><div id="navetre-2"></div></div>
+      <div class="nave navequattro-container" draggable="true"><div id="navequattro-0"></div><div id="navequattro-1"></div><div id="navequattro-2"></div><div id="navequattro-3"></div></div>
+      <div class="nave navecinque-container" draggable="true"><div id="navecinque-0"></div><div id="navecinque-1"></div><div id="navecinque-2"></div><div id="navecinque-3"></div><div id="navecinque-4"></div></div>
+    </div>
 
-</body>
+  </body>
 </html>
