now, when i take a ship, the dragged one will disappear

--- a/src/startgame.html
+++ b/src/startgame.html
@@ -9,17 +9,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Belanosima&display=swap" rel="stylesheet">
   </head>
   <body>
-
+    <div class="title-section">
+      <h1>Welcome on ET-Battleship</h1>
+    </div>
+      
+    </div>
     <div class="container">
         <div class="griglia griglia-user"></div>
         <div class="griglia griglia-computer"></div>
     </div>
 
     <div class="hidden-info">
-      <button id="start">Avvia Gioco</button>
-      <button id="rotate">Ruota le Tue Navi</button>
+      <button id="start" class="avvio">Avvia Gioco</button>
+      <button id="rotate" class="avvio">Ruota le Tue Navi</button>
       <h3 id="whose-go">Turno del giocatore:</h3>
-      <h3 id="info"></h3>
+      <h3 id="info">Le regole del gioco sono semplici. Devi posizionare le tue navi sulla griglia utente. <br> Dopo aver posizionato le navi, puoi avviare il gioco premendo il pulsante "Avvia Gioco"<br>  Buona fortuna!</h3>
     </div>
 
     <div class="griglia-display">
